--- a/Inhalt/00_Latex/praeambel.tex
+++ b/Inhalt/00_Latex/praeambel.tex
@@ -15,7 +15,8 @@
 \usepackage{lmodern}         % Nicht-gerasterte Schriftarten (bei MikTeX erforderlich)
 \usepackage{graphicx}        % Einbinden von Grafiken erlauben
 \usepackage{wrapfig}         % Grafiken fließend im Text
-\usepackage{setspace}        % Zeilenabstand \singlespacing, \onehalfspaceing, \doublespacing
+\usepackage{setspace}        % Zeilenabstand \singlespacing, \onehalfspaceing, 
+\doublespacing
 \usepackage[
 	%showframe,                % Ränder anzeigen lassen
 	left=2.7cm, right=2.5cm,
