--- a/Inhalt/04_Inhalt/appendix.tex
+++ b/Inhalt/04_Inhalt/appendix.tex
@@ -328,3 +328,13 @@ With the skipgram architecture the word2vec model is trained to predict the cont
 Word2Vec uses either SKIPGram or CBOW.
 
 Word2vec can utilize two models for selecting observations: either skipgram or \ac{CBOW}. 
+
+\newpage
+\section{Outliers}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[height=18cm]{Bilder/models/outliers.pdf}
+	\caption{Projection of the Data with Outliers marked Red }
+	\label{fig:dbscan-outliers}
+\end{figure}
