--- a/Inhalt/04_Inhalt/content_business_understanding.tex
+++ b/Inhalt/04_Inhalt/content_business_understanding.tex
@@ -54,8 +54,10 @@ To summarize both relevant data mining and business terminology, a glossary was 
 \textcolor{red}{This is not yet completed, as the glossary of terms will be expanded while writing the thesis.}
 	\paragraph{Clustering Algorithm} A clustering algorithm is a sequence of instructions, which arranges a set of instances into groups, which contain items of high similarity to each other.
 	\paragraph{Document} A document is a unit of data most typically containing natural language text.
+	\paragraph{Hyperparameter}
 	\paragraph{Hyperscaler} A hyperscaler is a company offering architecture to adapt to changing workloads in cloud computing, networking and internet services.
 	\paragraph{\acf{NLP}} \ac{NLP} is often attributed to computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
+	\paragraph{Overfitting}
 	\paragraph{Pickle}
 	\paragraph{Process}
 	\paragraph{Script} A script is  a small piece of code contained in a single file, most commonly written in a dynamic high-level programming language.
