--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -13,10 +13,12 @@
 	\acro{CRISP-DM}{Cross Industry Standard Process for Data Mining}
 	\acro{CoE}{Center of Excellence}
 	\acrodefplural{CoE}{Centers of Excellence}
+	\acro{DBSCAN}{Density-based Spatial Clustering of Applications with Noise}
 	\acro{ERP}{Enterprise Resource Planning}
 	\acro{GIL}{Global Interpreter Lock}
 	\acro{JSON}{JavaScript Object Notation}
 	\acro{KDD}{Knowledge Discovery in Databases}
+	\acro{LDA}{Latent Dirichlet Allocation}
 	\acro{ML}{Machine Learning}
 	\acro{MLM}{Masked Language Model}
 	\acro{NLP}{Natural Language Processing}
